# charly

./: IMPLEMENTATION_PLAN.md  PHASE1_TICKETS.md  README.md  ROADMAP.md  package-lock.json  package.json
extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
src/: App.css  App.tsx  api.ts  cite.ts  covers.ts  itemTypes.ts  pdfMeta.ts  readingState.ts  relations.ts  report.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BibliographyButton.tsx  Cover.tsx  CoverThumb.css  CoverThumb.tsx  DocReader.tsx  EpubViewer.tsx  FeedView.tsx  HtmlViewer.tsx  Inspector.tsx  ItemEditor.tsx  ItemList.tsx  LocalImage.tsx  NoteEditor.css  NoteEditor.tsx  PdfViewer.tsx  PersonView.tsx  PromptModal.tsx  ReportButton.tsx  SavedSearchModal.tsx  SnapshotViewer.tsx  TagSelector.tsx  TrashView.tsx  Tree.tsx
